--- a/Output/Halayudha_Kosha/1_SvargaKanda/SvargaKanda.yaml
+++ b/Output/Halayudha_Kosha/1_SvargaKanda/SvargaKanda.yaml
@@ -3217,7 +3217,7 @@
     qual: अष्टदिक्पालाः (eight cardinal directions)
 ? I apologize, but the provided text does not appear to be a valid Sanskrit sloka. The text looks like a mix of Devanagari characters and numerals without a coherent Sanskrit linguistic structure. Without a clear and recognizable Sanskrit verse, I cannot provide a meaningful correction. If you intended to share a Sanskrit sloka, please provide the text again, preferably in a clear Devanagari script format, and I'll be happy to help you correct any OCR errors.
 : entries: []
-शश तत्र दिक्पालाः पूर्वी प्राची याम्या दक्षिणा तथा अपराऽवाची । स्वस्तीर्या तीर्या कौवेरी चोत्तरोदीची ॥:
+ऐन्द्री पूर्वी प्राची याम्या दिग्दक्षिणा तथाऽवाची । स्याद्वारुणी प्रातीची कौवेरी चोत्तरोदीची ॥:
   entries:
   - head: दिक्पाल
     verify: false
@@ -3249,7 +3249,7 @@
       gender: f
     - prati: उत्तरोदीची
       gender: f
-'अन्तराला दिशश्चान्या विदिशः प्रदिशः स्मृताः । उपरिष्टादपरश्च उपरिष्टादुपर्यध: तथा अधस्तादवाक् अधः ॥':
+'अन्तराला दिशश्चान्या विदिशः प्रदिशः स्मृताः । उपरिष्टादुपर्यूध्र्वं तथा धस्तादवागधः ॥':
   entries:
   - head: दिश्
     verify: false
@@ -3277,7 +3277,7 @@
       gender: m
     - prati: अधः
       gender: m
-प्राचीनं प्राक् स्मृतं प्राज्ञैरुदीचीनमुदक् तथा । प्रत्यक् चैव प्रतीचीनमपाचीनमपाक् इति ॥:
+प्राचीनं प्राक् स्मृतं प्राज्ञैरुदीचीनमुदक् तथा । प्रत्यक् चैव प्रतीचीनमपाचीनमपागिति ॥:
   entries:
   - head: दिश्
     verify: false
@@ -3305,10 +3305,8 @@
     - prati: अपाक्
       gender: f
     qual: abbreviated forms of directional terms
-ऐरावतः पुण्डरीकः कुमुदाञ्जनवामनाः ॥:
-  entries: []
-श्रीशिवसंकल्पसिद्धये शिवे परां नमः समर्पये ॥:
-  entries:
+ऐरावतः पुण्डरीकः कुमुदाञ्जनवामनाः । पुष्पदन्तः सार्वभौमः सुप्रतीकश्च दिग्गजाः ॥: 
+ entries:
   - head: शिव
     verify: false
     gender: m
@@ -3337,8 +3335,6 @@
     syns:
     - prati: समर्पये
       gender: n
-पुष्पदन्तः सावर्भौमः सुप्रतीकश्च दिग्गजाः ॥:
-  entries:
   - head: दिग्गज
     verify: false
     gender: m
@@ -3351,7 +3347,7 @@
       gender: m
     - prati: दिग्गज
       gender: m
-वृष्टिपाते, वृष्टे पूर्वे, वृणमाने, दिष्ट करथानेहत्तदेदाः स्युः करादयः। अहोरात्र च विद्वद्भिः कथ्यते षष्टिनाडिकम् ॥:
+ दिष्ट कालस्तथानेहास्तद्भेदाः स्युः कलादयः । अहोरात्रं च विद्वद्भिः कथ्यते षष्टिनाडिकम् ॥:
   entries:
   - head: वृष्टि
     verify: false
@@ -3382,7 +3378,7 @@
     - prati: रात्रि
       gender: f
     qual: day and night
-नन्द दिगिश्च चेतुः स कर्म यतः ॥:
+दिवसो दिवा दिनं द्युः प्रोक्तमहर्वासरस्तथा घस्रः। प्रहरो यामः सन्ध्ये रजनीदिनयोः प्रवेशनिष्कासौ॥:
   entries:
   - head: दिश्
     verify: false
@@ -3402,8 +3398,6 @@
     syns:
     - prati: कर्म
       gender: n
-अहो यामः सन्ध्ये रजनीदिनयोः प्रवेरनिष्कासः ॥:
-  entries:
   - head: याम
     verify: false
     gender: m
@@ -3428,7 +3422,7 @@
       gender: n
     - prati: प्रवेर
       gender: m
-तमी तमिना कथिता तमस्विनो धि विभावरी नक्तमुखा च शर्वरी । क्षपा त्रियामा क्षणदा निशीथिनी, निशा च दोषा रजनी च यामिनी ॥:
+तमी तमिना कथिता तमस्विनी विभावरी नक्तमुखा च शर्वरी । क्षपा त्रियामा क्षणदा निशीथिनी, निशा च दोषा रजनी च यामिनी ॥:
   entries:
   - head: निशा
     verify: false
@@ -3464,7 +3458,7 @@
     syns:
     - prati: तम
       gender: m
-वसतिर्वासतेयी च द्यामा गणरात्रो निशा बह्वयदिचररात्रस्ततः । सायं दिवावसानं स्यात्प्रदोषो रात्रिश्च कथ्यते ॥ रजनीमुखम् ॥:
+वसतिर्वासतेयी च श्यामा रात्रिश्च कथ्यते । गण रात्रो निशा च बह्वयदिचररात्रस्ततः परम् ॥:
   entries:
   - head: रात्रि
     verify: false
@@ -3489,7 +3483,7 @@
     - prati: वसति
       gender: f
     qual: dwelling/residence
-निशीथो मध्यमा रात्रिः प्रोक्ता सा च महानिशा ॥:
+सायं दिवावसानं स्यात्प्रदोषो रजनीमुखम् । निशीथो मध्यमा रात्रिः प्रोक्ता सा च महानिशा ॥:
   entries:
   - head: रात्रि
     verify: false
@@ -3501,7 +3495,7 @@
       gender: f
     - prati: महानिशा
       gender: f
-अवतमसमन्धतमसं सतमस ध्वान्तमन्धकारं च । तिमिरं तमस्तमिलां तमिखलमिच्छन्ति भूरुदयाम् ॥:
+अवतमसमन्धतमसं संतमसं ध्वान्तमन्धकारं च । तिमिरं तमस्तमिस्रां  तमिस्रमिच्छन्ति भूछायाम् ॥:  
   entries:
   - head: तमस्
     verify: false
@@ -3525,7 +3519,7 @@
       gender: n
     - prati: तमिल
       gender: n
-कात्यमुषः प्रत्यूषं प्रगे प्रभातं भवेद्विभातं च । श दिवसमुखं गोसर्गैः प्रातर्व्युष्टं च निदिष्टम् ॥:
+काल्यमुषः प्रत्यूषं प्रगे प्रभातं भवेद्विभातं च । दिवसमुखं गोसर्गः प्रातर्व्युष्टं च निदिष्टम् ॥:
   entries:
   - head: प्रत्यूष
     verify: false
@@ -3544,7 +3538,7 @@
     - prati: दिवस
       gender: m
     qual: प्रातः (morning)
-अनुमतिर्लग्ने राका संपूर्णं पूर्णमासी च ॥:
+शशिनि सिनीवाली स्यद्द्रुष्टे नष्टे कुहूरमावास्या । अनुमतिरूने  राका संपूर्णे पूर्णमासी च ॥:
   entries:
   - head: अनुमति
     verify: false
@@ -3561,7 +3555,7 @@
     - prati: पूर्णमासी
       gender: f
     qual: पूर्णं (complete)
-भ्रुवहोरानः प्रकाशे, मासलये, स्यान्मासस्तस्याम्ऋतुवैसन्ताद्याः । ग्रीष्मः प्रावृट् शरदा हेमन्तः शिशिर इति षट् ॥:
+त्रिशदहोरात्रा  स्यान्मासस्ताभ्या मृतुर्वसन्ताद्याः । ग्रीष्मः प्रावृट् शरदा हेमन्तः शिशिर इति ते षट् ॥:
   entries:
   - head: ऋतु
     verify: false
@@ -3589,7 +3583,7 @@
     - prati: शिशिर
       gender: m
     qual: six seasons of the year
-चैत्रादिमासा मधुमाधवौ मासेन ततः परं शुक्रशुची क्रमेण । द्वौ नभोनभस्यौ कथिता विषोजी तपस्तपस्यौ ॥:
+चैत्रादिमासा मधुमाधवौ द्वौ ततः परं शुक्रशुची क्रमेण । नभोनभस्यौ कथिता विषोर्जो च तपस्तपस्यौ ॥:
   entries:
   - head: मास
     verify: false
@@ -3613,8 +3607,8 @@
     syns:
     - prati: तपस्य
       gender: n
-सहःसहस्यौ च मनुष्याणां दिव्यमहोरात्रमेकमिच्छन्ति । अब्देन तु देवानां ब्राह्मं देवयुगसहस्राभ्याम् ॥:
-  entries:
+मासेन मनुष्याणां  पिञ्यमहोरात्रमेकमिच्छन्ति । अब्देन तु देवानां ब्राह्मं देवयुगसहस्राभ्याम् ॥:
+ entries:
   - head: अहोरात्र
     verify: false
     gender: n
@@ -3637,8 +3631,8 @@
       gender: n
     - prati: सहस्र
       gender: n
-? शरदः तिमिरा तमिस्रा गौत्सर्गश् चैत्रादिमासौ ब्राह्मः । शशिना शरदे वा हायनान्द रदरषेसंवत्सरसमाः समाः । निदाघः कथ्यते ग्रीष्मो वर्षाः प्रावृट् तपात्ययः ॥
-: entries:
+हायनाब्दशरद्वर्षसंवत्सरसमाः समाः । निदाघः कथ्यते ग्रीष्मो वर्षाः प्रावृट् तपात्ययः ॥:
+ entries:
   - head: शरद्
     verify: false
     gender: m
@@ -3679,7 +3673,7 @@
       gender: f
     - prati: तपात्यय
       gender: m
-संवत्सरः परिवर्तः क्षयो युगान्तो जगद्विनाशकः । कल्पान्तः समसृष्टिः संहारः स्यान्महाप्रलयः ॥:
+संवर्तः परिवर्तः क्षयो युगान्तो जगद्विनाशश्च । कल्पान्तः समसुप्तिः संहारः स्यान्महाप्रलयः ॥:
   entries:
   - head: संवत्सर
     verify: false
@@ -3711,8 +3705,8 @@
       gender: m
     - prati: महाप्रलय
       gender: m
-श्रीसंस्कृतिकं सान्द्रफलं सधोदकं फलमुत्तरम् ॥:
-  entries:
+सान्द्रृष्टिकं फलं सधोदर्कः फलमुत्तरम् । तत्कालं तु तदात्वं स्यादुत्तरः कालो आयतिः ॥:
+ entries:
   - head: फल
     verify: false
     gender: n
@@ -3727,9 +3721,7 @@
       gender: n
     - prati: उत्तर
       gender: n
-तत्कालं तु तदात्वं स्याद्वर्तमानः कालो यतिः ॥:
-  entries:
-  - head: काल
+    - head: काल
     verify: false
     gender: m
     syns:
@@ -3743,7 +3735,7 @@
     syns:
     - prati: वर्तमान
       gender: m
-दितिर्अदितिर्अदनु कद्रूर्निकषा विनता च मातरः प्रोक्ताः। दैत्यसुरदानवोरगपिशाचाशनपक्षिराजानाम्॥:
+दितिरदितिर्दनुकद्रूनिकषाविनताश्च मातरः प्रोक्ताः। दैत्यसुरदानवोरगपिशिताशनपक्षिराजानाम्॥:
   entries:
   - head: मातृ
     verify: false
@@ -3775,8 +3767,8 @@
       gender: m
     - prati: पक्षिन्
       gender: m
-? दैत्य काद्र उरग शुर पिशाच दनु दानव रणाम् विनता पक्षिराज्। चन्द्राकविकवाक्येन पुष्पदन्तौ प्रकीर्तितौ ॥ जायापती च विद्धि जम्बती दस्बती तथा ॥
-: entries:
+चन्द्रार्कावेकवाक्येन पुष्पदन्तौ प्रकीर्तितौ ॥ जायापती च विद्वद्भिर्जम्प्ती तथा ॥:
+ entries:
   - head: दैत्य
     verify: false
     gender: m
