Fix formatting and grammar in SvargaKanda.yaml
Corrected and updated various Sanskrit entries in SvargaKanda.yaml, including adjustments to text formatting and grammar.

--- a/Output/Halayudha_Kosha/1_SvargaKanda/SvargaKanda.yaml
+++ b/Output/Halayudha_Kosha/1_SvargaKanda/SvargaKanda.yaml
@@ -3799,8 +3799,8 @@
       gender: f
     - prati: दस्बती
       gender: f
-? पृथ्वी दयावा भूमी च रोदस्यौ रोदसी रोदसीति च । करिषु भेजिनाच्छादावौषीरं शयनासने ॥ सदीगतीयं श्रेयसं स्यात् कल्याणं शिवं शुभम् । अविकं भविकं भावुकं श्रेयो भव्यं भद्रं च मङ्गलम् ॥
-: entries:
+द्यावाभूमी च रोदस्यौ रोदसी रोदसीति च । कशिषुर्भोजनाच्छादावौषीरं शयनासने ॥:
+ entries:
   - head: पृथ्वी
     verify: false
     gender: f
@@ -3809,6 +3809,9 @@
       gender: f
     - prati: रोदस्
       gender: m
+      syns:
+श्वः श्रेयसं स्यात्कल्याणं श्वोवसीयं शिवं शुभम् । भविकं भावुकं श्रेयो भव्यं भद्रं च मङ्गलम् ॥:      
+ entries:    
   - head: श्रेयस्
     verify: false
     gender: n
@@ -3835,7 +3838,7 @@
       gender: n
     - prati: भावुक
       gender: n
-रमः परमः सुखं नः चित्तस्य मोदः प्रमोदप्रमदौ हर्षः प्रीतिरुत्कर्षम् उद्धवः । सम्मोदो मुदा उत्थानन्दः शमं जोषं च सं सुखम् ॥:
+प्रमोदप्रमदौ हर्षः प्रीतिरुत्कर्ष उद्धवः । सम्मोदो मुत्तथानन्दः शर्म जोषं च शं सुखम् ॥:
   entries:
   - head: सुख
     verify: false
@@ -3929,7 +3932,7 @@
     syns:
     - prati: मोक्षा
       gender: f
-हरेर्गुणकोशः | ऋणं सनातनं भ्रुवं नित्यं शाश्वतं स्यादनश्वरम् । धर्मेः पुण्यं वृषः श्रेयः सुकृतं च समं स्मृतम् ॥:
+सनातनं ध्रुवं नित्यं शाश्वतं स्यादनश्वरम् । धर्मः पुण्यं वृषः श्रेयः सुकृतं च समं स्मृतम् ॥:
   entries:
   - head: ऋण
     verify: false
@@ -3959,8 +3962,8 @@
       gender: n
     - prati: सुकृत
       gender: n
-? इष्टानिष्टफलं प्राज्ञैः स्मृतं देवमयानयम् । भाग्यं विपाको भवितव्यता नियतिः ॥ उपलिङ्गमरिष्टं स्यादुत्सर्गो उपद्रवस्तथा । उत्पातः क्षयजन्यं च बुधैर्मरो विप्लवः कथितः ॥
-: entries:
+इष्टानिष्टफलं प्राज्ञैः स्मृतं देवमयानयम् । भागधेयं तथा भाग्यं  विपाको भवितव्यता ॥: 
+ entries:
   - head: फल
     verify: false
     gender: n
@@ -3979,6 +3982,8 @@
       gender: f
     - prati: भाग्य
       gender: n
+उपलिङ्गमरिष्टं स्यादुत्सर्गो उपद्रवस्तथोत्पातः । ईतिरजन्यं च बुधैर्डमरो डिम्बश्च विप्लवः कथितः ॥: 
+ entries:    
   - head: उत्पात
     verify: false
     gender: m
@@ -3991,8 +3996,8 @@
       gender: m
     - prati: विप्लव
       gender: m
-भक्तिः सार्चा पूजा सपर्या स्याद्युपहारो बलिः स्मृतः । प्रणिधानं समाधानं समाधिश्चेति त्रयः समाः ॥:
-  entries:
+अर्चा पूजा सपर्या स्यादुपहारो बलिः स्मृतः । प्रणिधानं समाधानं समाधिश्च समास्त्रयः ॥: 
+ entries:
   - head: भक्ति
     verify: false
     gender: f
@@ -4036,7 +4041,7 @@
     syns:
     - prati: पद्मासन
       gender: n
-'वरिवस्या परिचर्या शुश्रूषोपासना परीक्षिः स्यात् । जनितानि सेवा: प्रसादन राधनोपचाराश्च ॥':
+वरिवस्या परिचर्या शुश्रूषोपासना परीष्टिः स्यात् । सेवा भक्तिरुपास्तिः प्रसादनाराधनोपचाराश्च ॥:
   entries:
   - head: परिचर्या
     verify: false
@@ -4064,7 +4069,7 @@
       gender: n
     - prati: उपचार
       gender: m
-प्रतिविम्बं प्रतिस्थं प्रतिमानं प्रतिकृति प्रतिच्छन्दम् । प्रतिकायं च प्रतिनिधिमाहुः पतिर्यातनां प्रतिच्छायाम् ॥:
+प्रतिबिम्बं प्रतिरूपं प्रतिमानं प्रतिकृतिं प्रतिच्छन्दम् । प्रतिकायं च प्रतिनिधिमाहुः पतियातनां प्रतिच्छायाम् ॥: 
   entries:
   - head: प्रतिमान
     verify: false
@@ -4088,7 +4093,7 @@
       gender: f
     - prati: प्रतिकाय
       gender: n
-अर्चा तु प्रतिमा प्रोक्ता हरिणी स्याद्धिरण्मयी। अन्यलोहमयी वाऽपि सूर्णा स्थूणा च कथ्यते॥:
+अर्चा तु प्रतिमा प्रोक्ता हरिणी स्याद्विरण्मयी। अन्यलोहमयी प्रज्ञैः  सूर्मी स्थूणा च कथ्यते॥:
   entries:
   - head: प्रतिमा
     verify: false
@@ -4108,9 +4113,8 @@
       gender: f
     - prati: सूर्णा
       gender: f
-    qual: अन्यलोहमयी वाऽपि हिरण्मयी
-न भिमं शुचिर्मेध्यं पवित्रं च पूष्यणं पावनमुच्यते । प्रविमलं विशदं वीक्ष्यमुज्ज्वलं स्यादनाविलम् ॥:
-  entries:
+शुचिर्मेध्यं पवित्रं च पूण्यं पावनमुच्यते । विमलं विशदं वीध्रमुज्ज्वलं स्यादनाविलम् ॥:
+ entries:
   - head: शुचि
     verify: false
     gender: n
@@ -4131,7 +4135,7 @@
       gender: n
     - prati: अनाविल
       gender: n
-विष्टपं भुवनं लोको जगदेकार्थमेवाचकाः । अमं त्रिदशधारः स्था दीर्घमुच्यते ॥:
+भुवनं विष्टपं लोको जगदेकार्थवाचकाः । अमृतं त्रिदशहारः सुधा पीयूषमुच्यते ॥:
   entries:
   - head: भुवन
     verify: false
@@ -4149,7 +4153,7 @@
     syns:
     - prati: अम
       gender: m
-त आसवो जीवितं रङ्गा जीवो जीवा च कथ्यते । क्षेवन्यः पुरषो ध्यानमा गन च मतः ॥:
+आसवो जीवितं प्राणा जीवो जीवा च कथ्यते । क्षेत्रज्ञः पुरषो ह्यात्मा संसारी चेतनो मतः ॥:
   entries:
   - head: आसव
     verify: false
@@ -4245,8 +4249,8 @@
       gender: m
 ? I apologize, but the text you've provided appears to be heavily corrupted OCR output that does not resemble a valid Sanskrit sloka. Without a clear, legible original Sanskrit text, I cannot reconstruct or correct the verse. Could you please provide a clear, readable version of the Sanskrit sloka?
 : entries: []
-मन्दारपारिजातकदलिततरुणाद्रिपुष्पकर्पूरवक्षःसु | पञ्चैते सुरतरवो मरुद्भवा ज्ञेयाः सुरैः पूजिताः ॥:
-  entries:
+मन्दारपारिजातकहरिचन्दनकल्पवृक्षसन्तानाः । पञ्चैते सुरतरवो मरुः सुरपर्वतो ज्ञयः ॥:
+ entries:
   - head: तरु
     verify: false
     gender: m
@@ -4274,7 +4278,7 @@
     - prati: मरुत्
       gender: m
     qual: देवों द्वारा पूजित
-यवी दारु पलमुत्तमम् एव तः ॥:
+यवी दारु पलमुत्तमम् एव तः ॥
   entries:
   - head: यव
     verify: false
@@ -4296,7 +4300,7 @@
       gender: n
     - prati: उत्तम
       gender: n
-स्लाघानुरिति ख्यातो हिमादिस्विदकालयः ॥:
+शक्रक्रीडाचलो मेरुः सुमेरुर्हेमपर्वतः । रत्नस्यानुरिति ख्यातो हेमाद्रिस्त्रिदशालयः ॥:
   entries:
   - head: ख्यात
     verify: false
@@ -4314,7 +4318,7 @@
       gender: m
     - prati: स्विदकालय
       gender: m
-नमो महामहिमा विभाय मारुतः करं यन्तम् ॥:
+ नभो मरुद्वत्र्म वियद्विहाय स्तारापथः पुष्करमनतरिक्षम् । व्योमाम्बरं विष्णुपदं च खं द्यौर्विहायसा स्याद्गगनं तथा द्युः ॥:
   entries:
   - head: महिमन्
     verify: false
@@ -4338,8 +4342,6 @@
     syns:
     - prati: करं यन्त
       gender: m
-वियोमाम्बर विष्णुपदं च | चौ विहायसा स्याद्गगनं तथा च ॥:
-  entries:
   - head: विष्णुपद
     verify: false
     gender: n
@@ -4356,7 +4358,7 @@
       gender: n
     - prati: गगन
       gender: n
-हदः शब्दः स्वनो ध्वनिः स्वरो रवो घोषः । अभिधानवदाहुरौदार्गिकनीदयस्तत्र हेतुः ॥:
+ह्रदो नादः शब्दः स्वानो ध्वनाः स्वरो रवो घोषः । अभिधानव्याहारोदीरणकथनादयस्तु तद्भेदाः ॥:
   entries:
   - head: शब्द
     verify: false
@@ -4376,7 +4378,7 @@
       gender: m
     - prati: घोष
       gender: m
-कोदण्डः कटकः स्तुमुलो वनु रवः। उच्चावचानि भोजनमिदं तु यद्वचः॥:
+कोलाहलः कलकलस्तुमुलो व्याकुलो रवः। उच्चावचामिति प्रोक्तमनिबध्दं तु यद्वचः॥:
   entries:
   - head: कोदण्ड
     verify: false
@@ -4404,8 +4406,8 @@
       gender: n
     - prati: उच्चावच
       gender: n
-उच्चैर्मृदङ्गे ध्वनिस्तापो मन्दः कम्पी च गीयते । कलहो मधुरोऽव्यक्तो विक्रष्टो निष्ठुरो मतः ॥:
-  entries:
+उच्चैस्तरो ध्वनिस्तारो मन्द्रो गम्भीर उच्यते । कलश्च मधुरोऽव्यक्तो विक्रुष्टो निष्ठुरो मतः ॥:
+ entries:
   - head: ध्वनि
     verify: false
     gender: m
