Update SvargaKanda.yaml with corrections
completed slokas from 101 to 155

--- a/Output/Halayudha_Kosha/1_SvargaKanda/SvargaKanda.yaml
+++ b/Output/Halayudha_Kosha/1_SvargaKanda/SvargaKanda.yaml
@@ -4475,7 +4475,7 @@
     - prati: वियुत
       gender: m
     qual: स्पष्ट, व्यक्त
-तूर्णोदितं निरस्तं स्याद् प्रस्थं लूनपदं स्मृतम् । अस्य सन्निष्ठीवं प्राम्यमरलीलमुच्यते ॥:
+तूर्णोदितं निरस्तं स्याद्  ग्रस्थं लुप्तपदं स्मृतम् । अम्बूकृतं सन्निष्ठीवं ग्राम्यमश्लीलमुच्यते ॥:
   entries:
   - head: तूर्ण
     verify: false
@@ -4519,7 +4519,7 @@
     syns:
     - prati: अरलील
       gender: m
-भिन्नकण्ठो ध्वनिधीरः काकुरित्यभिधीयते । समासप्रायमाख्यातं पदजातं च तण्डकम् ॥:
+भिन्नकण्ठो ध्वनिर्धीरैः काकुरित्यभिधीयते । समासप्रायमाख्यातं पदजातं च तण्डकम् ॥:
   entries:
   - head: ध्वनि
     verify: false
@@ -4543,7 +4543,7 @@
     syns:
     - prati: भिन्नकण्ठ
       gender: m
-भीमाद्रि घोरमपि यश्च भवद्धनं च पुनश्चोच्चैः स्वरो निर्लीलमिष्यते । यत्रोत्पन्नं तद् वक्तव्यं यथार्थं नमोऽस्तु ते ॥:
+भीमाद्रि घोरमपि यश्च भवद्धनं च पुनश्चोच्चैः स्वरो निर्लीलमिष्यते । यत्रोत्पन्नं तद् वक्तव्यं यथार्थं नमोऽस्तु ते ॥
   entries:
   - head: घोर
     verify: false
@@ -4571,7 +4571,7 @@
     syns:
     - prati: उत्पन्न
       gender: n
-राजचन्द्रस्य वाक्यं वितं भीया मृषा स्यादनृतं तथा । अथेवाचः शंसा च सतोत्कर्षा सृतिर्नुतिः ॥:
+ऋतं सत्यं समीचीनं सम्यक् तथ्यं यथातथम् । अलीकं विथतं मिथ्या मृषं स्यादनृतं तथा ॥:
   entries:
   - head: वाक्य
     verify: false
@@ -4605,7 +4605,7 @@
       gender: f
     - prati: नुति
       gender: f
-विकत्थनं स्तवः श्लाघा वर्णना च निगद्यते । चाटु प्रियं वाच्यं हृदयगमं समं वचः ॥:
+अर्थवादं प्रशंसा च स्तोत्रमीडा सृतिर्नुतिः। विकत्थनं स्तवः श्लाघा वर्णना च निगद्यते ॥: 
   entries:
   - head: स्तव
     verify: false
@@ -4623,6 +4623,12 @@
     verify: false
     gender: n
     syns:
+चाटु चाटु प्रियं वाक्यं हृद्यार्थं हृदयङ्गममं । वार्तोदन्तः प्रवृत्तिश्च वृत्तान्तश्च समाः स्मृताः ॥:
+  entries: 
+  - head: चाटु
+    verify: false
+    gender: m
+    syns:
     - prati: चाटु
       gender: n
     - prati: प्रिय
@@ -4633,7 +4639,7 @@
       gender: n
     - prati: समम्
       gender: n
-भानुदीव्यात्ती शिवधं किवदन्ती जनश्रुतिः । कौलीनं जनवादः सान्विताऽनं च नीयते ॥:
+अनादिवार्ता हौतिहच्यं किंवदन्ती जनश्रुतिः । कौलीनं जनवादः स्याद्विगानं वचनीयता ॥:
   entries:
   - head: जनश्रुति
     verify: false
@@ -4665,7 +4671,7 @@
       gender: m
     - prati: अपवाद
       gender: m
-एकार्थाः कथ्यन्ते गर्हा निन्दा जुगुप्सा च ॥:
+अपवाद उपक्रोशो निर्वादावर्णवादपरिवादाः । एकार्थाः कथ्यन्ते गर्हा निन्दा जुगुप्सा च ॥: 
   entries:
   - head: गर्ह
     verify: false
@@ -4683,7 +4689,7 @@
     syns:
     - prati: एकार्थ
       gender: m
-साप आलोचनाक्षेपः क्षारणा स्याद्धिरूक्षणम् । स्मृताः सोल्लिहिताः सोत्रा विहासाः समास्त्रयः ॥:
+ शाप आक्रोश आक्षेपः क्षारणा स्याद्धिरूक्षणम् । स्मृताः सोल्लुण्ठसोत्प्रास सोपहासाः समास्त्रयः ॥:
   entries:
   - head: आलोचन
     verify: false
@@ -4713,7 +4719,7 @@
       gender: m
     - prati: सोत्र
       gender: m
-अनुलापो मुहुर्भाषा पुनर्वचः। अत्यश्न चाब्रवीद्वाक्य व्यवनमुल्लापः संलापो भाषणं मिथः॥:
+अनुलापो मुहुर्भाषा प्रलापोऽनर्थकं वचः​। काक्वा वर्णनमुल्लापः संलापो भाषणं मिथः॥:
   entries:
   - head: भाषण
     verify: false
@@ -4737,7 +4743,7 @@
     syns:
     - prati: वाक्य
       gender: n
-न वाण्ड गमर्मरः शुष्कपर्णानां विस्फारो धनुषां ध्वनिः वातसः | शलभः वहितं बहुहषः च वाजिनाम् ॥:
+मर्मरः शुष्कपर्णानां विस्फारो धनुषां ध्वनिः वातसः । वृहितं वारणानां च हेषा ह्रेषा च वाजिनाम् ॥:
   entries:
   - head: वाजिन्
     verify: false
@@ -4769,7 +4775,7 @@
       gender: m
     - prati: वातस
       gender: m
-'पद्धति: संज्ञा अभिधा वाचं नाम च नाम च वा । आख्यायिका कथाख्यानं प्रबन्धः प्रहेलिका ॥':
+आख्या संज्ञाभिधाह्वानं नामधेयं च नाम च । आख्यायिका कथाख्यानं प्रह्वलिका प्रहेलिका ॥:
   entries:
   - head: पद्धति
     verify: false
@@ -4801,7 +4807,7 @@
       gender: m
     - prati: प्रहेलिका
       gender: f
-विदुरामृषितं प्राज्ञा द्विस्त्र्याहरणं च यत् । एक एव श्लोको यशोऽभिख्यासमाख्यातुल्यलक्षणः ॥:
+विदुराम्रेडितं प्राज्ञा द्विस्त्रिव्यार्हरणं च यत् । कीर्तिः श्लोको यशोऽभिख्यासमाख्यास्तुल्यलक्षणः ॥:
   entries:
   - head: प्राज्ञ
     verify: false
@@ -4824,7 +4830,8 @@
     - prati: यश
       gender: n
 ? ॐ कवित्वनं च ह्यो दीयमान्यं, ज्योतिर्दयं, ज्योतिर्यं वा। आक्षेप आक्रोशः, शापः आकारः, आपत्रश्च क्रोश आक्षेपः। सोत्प्रास्य लोपहासाः, सोत्प्रासः सोपहासः। प्रबल्हिका द्वित्रिव्या॥ ततो नानुयोगः स्यादनुयोगो भवेदुपालम्भः। आकारणमाह्वानं कथयन्त्यभिमन्त्रणं प्राज्ञाः॥
-: entries:
+प्रश्नः स्यादनुयोगः पर्यनुयोगो भवोदुपालम्भः । आकारणमाह्वानं कथयन्त्यभिमन्त्रणं प्रज्ञाः ॥:
+ entries:
   - head: आक्षेप
     verify: false
     gender: m
@@ -4857,7 +4864,7 @@
       gender: m
     - prati: सोपहास
       gender: m
-तत्र भवान् भगवान् इति शब्दो वृद्धैः प्रयुज्यते पूज्य। पादाः इति नामान्ते देवो भटरारको वा अपि ॥:
+तत्रभवान् भगवानिति शब्दो वृद्धैः प्रयुज्यते पूज्य। पादा इति नामान्ते देवो भट्टारको वापि ॥:
   entries:
   - head: भगवत्
     verify: false
@@ -4877,7 +4884,7 @@
       gender: m
     - prati: देव
       gender: m
-इति श्रीभद्रहरायुधकृतायामभिधानरत्नमालायां स्वकाण्डं प्रथमं समाप्तम् ॥:
+इति श्रीभद्रहलायुधकृतायामभिधानरत्नमालायां स्वर्गकाण्डं प्रथमं समाप्तम् ॥:
   entries:
   - head: श्री
     verify: false
