Fix OCR errors and enhance Sanskrit verse structure
Corrected OCR artifacts and improved the structure of the Sanskrit verses in BhumiKanda.yaml. 

Done 156 to 201

--- a/Output/Halayudha_Kosha/2_BhumiKanda/BhumiKanda.yaml
+++ b/Output/Halayudha_Kosha/2_BhumiKanda/BhumiKanda.yaml
@@ -1,4 +1,4 @@
-भूर्भूमिर्वसुधावनिर्वसुमती धात्री धरित्री धरा, गोर्गोत्रा जगती रसा क्षितिरिल क्षोणी क्षमा क्षमाचला । कुः पृथ्वी पृथिवी स्थिरा च धरणी विश्वम्भरा मेदिनी, ज्ञानान्ता विपुला समुद्रवसना सर्वंसहोर्वी मही ॥:
+भूर्भूमिर्वसुधावनिर्वसुमती धात्री धरित्री धरा, गोर्गोत्रा जगती रसा क्षितिरिल क्षोणी क्षमा क्षमाचला । कुः पृथ्वी पृथिवी स्थिरा च धरणी विश्वम्भरा मेदिनी, ज्ञानान्ता विपुला समुद्रवसना सर्वंसहोर्वी मही ॥: १५६
   entries:
   - head: भूमि
     verify: false
@@ -301,7 +301,7 @@
       gender: n
     - prati: पुरी
       gender: f
-पादकः कटकः शेषः सानुः प्रस्थं तटं भृगुः ॥:
+? पादकः कटकः शेषः सानुः प्रस्थं तटं भृगुः ॥
   entries:
   - head: पाद
     verify: false
@@ -454,7 +454,7 @@
       gender: f
     - prati: रमा
       gender: f
-उच्यते गैरिकं भात्रा तस्माभ्यं दत्वमुद्धरम् ॥:
+? उच्यते गैरिकं भात्रा तस्माभ्यं दत्वमुद्धरम् ॥
   entries:
   - head: गैरिक
     verify: false
@@ -566,8 +566,8 @@
     syns:
     - prati: तार
       gender: n
-? हेमकोशः स्वैः जातरूपं सुवर्णं, भम स्वर्णं हाटकं शातकुम्भम् । गाङ्गेयं स्याद्गैरिकं भूरिचन्द्रं, राजः कल्याणं निष्कमष्टापदं च ॥
-: entries:
+हेम स्वर्णं जातरूपं सुवर्णं, भर्मं हाटकं शातकुम्भम् । गाङ्गेयं स्याद्गैरिकं भूरिचन्द्रं, राः कल्याणं निष्कमष्टापदं च ॥:
+ entries:
   - head: सुवर्ण
     verify: false
     gender: n
@@ -608,7 +608,7 @@
       gender: m
     - prati: अष्टापद
       gender: n
-जाम्बव हिरण्यं कनकमहार्हनीयकाञ्चनानि स्युः । कार्तस्वरचामीकरकर्पूरतपनीयनामानि ॥:
+जाम्बूनदं हिरण्यं कनकमहारजतकाञ्चनानि स्युः । कार्तस्वरचामीकरकर्बुरतपनीयनामानि ॥:
   entries:
   - head: हिरण्य
     verify: false
@@ -636,7 +636,7 @@
     - prati: तपनीय
       gender: n
     qual: gold or golden substances
-भ्रमर मरकतं हरिन्मणिरिति स्मृतः। शोणार्णव पद्मरागः स्याद्द्वये बालवयस्जम्॥:
+अश्मगर्भं मरकतं हरिन्मणिरिति स्मृतः। शोणाश्मा पद्मरागः स्याद्वैदूर्यं बालवयजम्॥:
   entries:
   - head: मरकत
     verify: false
@@ -654,7 +654,7 @@
       gender: m
     - prati: शोणार्णव
       gender: m
-स्फटिकः सूर्यकान्तः स्याद्वक्रदीप्ता दहन्नपाः। रत्नं वसु मणिः सर्वं स्वं लोहं च तैजसम्॥ १७६॥:
+स्फटिकः सूर्यकान्तः स्यादर्काश्मा दहनोपलः। रत्नं वसु मणिः सर्वं सर्वं लोहं च तैजसम्॥:
   entries:
   - head: स्फटिक
     verify: false
@@ -690,8 +690,8 @@
       gender: n
     - prati: स्व
       gender: n
-? वृक्षोऽद्रिः क्षितिरुहः शिखरी च शाखी शालो वनस्पतिरगो विटपी कुठारः। अद्रिः कुजस्तरुरनूह इत्यभिन्नाः; शब्दा हि वृष्टिरनघद्रुमपादपाश्च॥
-: entries:
+ वृक्षोऽह्निपः क्षितिरुहः शिखरी च शाखी शालो वनस्पतिरगो विटपी कुठश्च । अद्रिः कुजस्तरुरनोकह इत्यभिन्नाः शब्दा द्रुविष्टरनगद्रुमपादपाश्च ॥:
+  entries:
   - head: वृक्ष
     verify: false
     gender: m
@@ -720,7 +720,7 @@
       gender: m
     - prati: अनूह
       gender: m
-अवकेशी स विज्ञेयः फलैर्वेन्ष्यस्तु यो भवेत् । क्षुपो ह्रस्वशिफाशाखी फलवान् फलिनः फली ॥:
+अवकेशी स विज्ञेयः फलैर्बन्ध्यस्तु यो भवेत् । क्षुपो ह्रस्वशिफाशाखी फलवान् फलिनः फली ॥:
   entries:
   - head: फलिन्
     verify: false
@@ -760,7 +760,7 @@
     syns:
     - prati: वनस्पति
       gender: m
-ओषधी फलपाकास्तु बुधरोषधयः स्मृताः । रता प्रतानिनी वल्ली प्रतिवृत्तिस्तथा ॥:
+ फलपाकावसानास्तु बुधैरोषधयः स्मृताः । लता प्रतानिनी वल्ली प्रततिर्वृततिस्तथा ॥: १८०
   entries:
   - head: ओषधि
     verify: false
@@ -793,7 +793,7 @@
     syns:
     - prati: फलपाक
       gender: m
-हृषीकेशः सर्वकर्ता चिदानन्दो विभुर्हरिः । भस्मभूषा स्यादैदूर्वं सर्वकर्म कुरुते नमः ॥:
+हृषीकेशः सर्वकर्ता चिदानन्दो विभुर्हरिः । भस्मभूषा स्यादैदूर्वं सर्वकर्म कुरुते नमः ॥
   entries:
   - head: कर्तृ
     verify: false
@@ -827,7 +827,7 @@
     syns:
     - prati: सर्वकर्म
       gender: n
-? 'वाच स्तन्यमिवोत्तमं गुणवतां सद्भिः परिष्वज्यते ॥१॥ (Note: This is a reasonable interpretation based on the corrupted OCR text, assuming it was intended to be a Sanskrit verse. The correction resolves the OCR artifacts and provides a meaningful Sanskrit verse structure.)'
+?? 'वाच स्तन्यमिवोत्तमं गुणवतां सद्भिः परिष्वज्यते ॥१॥ (Note: This is a reasonable interpretation based on the corrupted OCR text, assuming it was intended to be a Sanskrit verse. The correction resolves the OCR artifacts and provides a meaningful Sanskrit verse structure.)'
 : entries:
   - head: गुण
     verify: false
@@ -869,7 +869,7 @@
       gender: m
     - prati: कर्म
       gender: n
-अवाग्भागो भवेद् बुध्नः प्राग्रं तु रिषिरं शिरः । विस्तारो विटपः प्रोक्त आरोहस्तु समुच्छयः ॥:
+अवाग्भागो भवेद् बुध्नः प्राग्रं तु  शिखिरं शिरः । विस्तारो विटपः प्रोक्त आरोहस्तु समुच्छयः ॥: १८१
   entries:
   - head: बुध्न
     verify: false
@@ -897,7 +897,7 @@
     syns:
     - prati: आरोह
       gender: m
-स्कन्धशाखा तु शाला स्याच्छ्निष्रुटः कोटरः स्मृतः ॥:
+स्कन्धादधः पाकण्डः स्यात्प्रघाणः स्कन्धं उच्यते । स्कन्धशाखा तु शाला स्यान्निष्टकुटः कोटरः स्मृतः ॥:
   entries:
   - head: स्कन्ध
     verify: false
@@ -921,7 +921,7 @@
       gender: m
     - prati: कोटर
       gender: m
-त्वक् लक्ष्मं वल्कलं प्रोक्तं मज्जा सार उदाहृतः । करहाटं भवेत् कन्दः पादो मूलं जटा शिफा ॥:
+त्वग्वल्कलं वल्कलं  प्रोक्तं मज्जा सार उदाहृतः । करहाटं भवेत्कन्दः पादो मूलं जटा शिफा ॥:
   entries:
   - head: त्वच्
     verify: false
@@ -955,7 +955,7 @@
     syns:
     - prati: शिफा
       gender: f
-आवालः आक्वालः स्याद्धावापः स्थानकं तथा। लतोद्गमोऽवरोहस्तु प्रवालः पल्लवाङ्कुरः॥:
+आवाल आलवालः स्यादावापः स्थानकं तथा। लतोद्गमोऽष्वरोहस्तु प्रवालः पल्लवाङ्कुरः॥:
   entries:
   - head: प्रवाल
     verify: false
@@ -977,8 +977,8 @@
       gender: m
     - prati: अङ्कुर
       gender: m
-? पल्लवः स्यात्किसलयं वल्लरी मञ्जरी तथा। वहौ पणेः दं पत्रं पलाशं छदनं छदः। अङ्कुरो दलाङ्कुरः पुष्टः वृन्तं प्रसवबन्धनम् ॥ १८५॥
-: entries:
+? पल्लवः स्यात्किसलयं वल्लरी मञ्जरी तथा । वर्हं पर्णं दलं पत्रं पलाशं छदनं छदः। अङ्कूरश्चाङ्कुरः प्रोक्तो वृन्तं प्रसवबन्धनम् ॥: ॥ १८५॥
+  entries:
   - head: पल्लव
     verify: false
     gender: m
@@ -1015,7 +1015,7 @@
       gender: n
     - prati: प्रसवबन्धन
       gender: n
-पुष्पं प्रसवः कुसुमं प्रसूनकं सुमनसः समाख्याताः। कोरकजालककलिकाकुडमलमुकुलानि तुल्यानि॥:
+ पुष्पं प्रसवः कुसुमं प्रसूनकं सुमनसः समाख्याताः। कोरकजालककलिकाकुड्मलमुकुलानि तुल्यानि ॥:
   entries:
   - head: पुष्प
     verify: false
@@ -1049,7 +1049,7 @@
       gender: n
     - prati: मलमुकुल
       gender: n
-निजन्मतमुन्मीलितमुन्मिषितं स्मितमुदात्तं विजृम्भितं हसितम् । उदबुद्धमव्याकोशं पुष्पेषु विकाशवाचकाः शब्दाः ॥:
+उन्मोलितमुन्मिषितं स्मितमुन्निदं विजृम्भितं हसितम् । उदबुद्धं व्याकोशं पुष्पेषु विकाशवाचकाः शब्दाः ॥: 
   entries:
   - head: हास्य
     verify: false
@@ -1107,7 +1107,7 @@
       gender: m
     - prati: गुलुञ्छ
       gender: m
-टिल्लकोलक एतस्य कोलादुः कोमलं फलम् | वानं बुष्कफलं भवेत् | बीजकोरी शमी चिम्बा श्रन्थिः पवै परस्तथा ॥:
+शलाटुः कोमलं  प्रोक्तं वानं शष्कफलं भवेत् । बीजकोशी शमी शिम्बा ग्रन्थिः पर्व परुस्तथा ॥:
   entries:
   - head: फल
     verify: false
@@ -1181,8 +1181,8 @@
       gender: m
     - prati: परः
       gender: m
-हलायुधकोशः शुलपस्तम्बगुल्मारच वीरुधो विटपाः स्मृताः। शष्पं बालतृणं प्रोक्तं स्वै च तुणमजुनम् ॥:
-  entries:
+उलपास्तम्बगुल्माश्च वीरुधो विटपाः स्मृताः। शष्पं बालतृणं प्रोक्तं सर्वं च तृणमर्जुनम् ॥: 
+ entries:
   - head: कोश
     verify: false
     gender: m
@@ -1217,7 +1217,7 @@
       gender: n
     - prati: अजुन
       gender: n
-घासस्तु यवसः प्रोक्तो वहिदेभैः कुथः कुशः । अच्च उलो वल्वजः प्रोक्त इषीका काश उच्यते । हरताल भवेद्वा शते मुज्ज इति स्मृतः ॥:
+घासस्तु यवसः प्रोक्तो बहिर्दर्भः कुथः कुशः । उलोपो वल्वजः प्रोक्त इषीका काश उच्यते । हरिताली भवेद्दूर्वा शरो मुज्ज इति स्मृतः ॥: १९१
   entries:
   - head: यवस
     verify: false
@@ -1251,8 +1251,8 @@
     syns:
     - prati: हरताल
       gender: m
-तद् विमोचः न कथ्यते सर्वस्य । न विद्विषोऽस्य नकार ॥:
-  entries:
+रम्भा मोचा कदली तृणराजः कथ्यते तलस्तालः । कङ्केलिरशोकः स्यादाम्रश्चूतश्च सहकारः ॥:
+ entries:
   - head: विमोच
     verify: false
     gender: m
@@ -1266,8 +1266,8 @@
     - prati: नकार
       gender: m
     qual: विद्विष्
-मकरा गोमुखी राघा हारिका च कथ्यते । पारिजातं फलं श्यामा कुटजो विपुलल्लिका ॥:
-  entries:
+मृद्वीका गोस्तनी द्राक्षा हारहूरा च कथ्यते । प्रियङ्गु फलिनी श्यामा कुटजो गिरिमल्लिका ॥:
+ entries:
   - head: मकर
     verify: false
     gender: m
@@ -1298,7 +1298,7 @@
       gender: m
     - prati: विपुलल्लिका
       gender: f
-व्यवोच दमासे मालूरः शकलो मवचित्रः । कर्णो जम्भौ सयादिदं श्रवः च किलु ॥:
+करवीरो हयमारो मालूरः श्रिफलो भविद्विल्वः । करुणो जम्बीरः स्यादूदरी कुवली च कर्कन्दः ॥:
   entries:
   - head: शकल
     verify: false
@@ -1322,7 +1322,7 @@
     syns:
     - prati: जम्भु
       gender: m
-अर्जुनं ककुभं प्राहुः सालं च महासुरयः। ज्ञानुकः पिचुरः प्रोक्तः सर्जरो निचुलः स्मृतः॥:
+अर्जुनं ककुभं प्राहुः सालं सर्जं च सूरयः। झाबुकः पिचुलः प्रोक्त इज्जलो निचुलः स्मृतः॥:
   entries:
   - head: अर्जुन
     verify: false
@@ -1342,7 +1342,7 @@
       gender: m
     - prati: निचुल
       gender: m
-अरिष्ट नीलनिधिः साल्वो भार उच्यते । मेरुनिर्पतनस्थौ बुधोदित्स्व कथ्यते ॥:
+अरिष्टः पिचुमन्दः स्यान्नयग्रोधो वट उच्यते । श्रीवृश्रः पिप्पलोऽश्वत्थो बुधैर्बोधिश्च कथ्यते ॥:
   entries:
   - head: अरिष्ट
     verify: false
@@ -1372,7 +1372,7 @@
     syns:
     - prati: बुध
       gender: m
-ब्रह्म पाराकः स्यात्कपित, महावृक्षः स्नुहिः प्रोक्तः शेलुः श्लेष्मातक स्मृतः ॥:
+ब्रह्मवृक्षः पालाशः स्यात्किंशुकश्च त्रिपत्रकः । महावृक्षः स्नुहिः प्रोक्तः शेलुः श्लेष्मातक स्मृतः ॥:
   entries:
   - head: ब्रह्म
     verify: false
@@ -1394,7 +1394,7 @@
       gender: m
     - prati: श्लेष्मातक
       gender: m
-नक्तमालः करञ्जः स्याद्दारुषा बालार्क । आरग्वधः कृतमालः स्वर्णपुष्पी च कथ्यते ॥:
+नक्तमालः करञ्जः स्याद्द्रृषा वासातरूसकः । आरग्वधः कृतमालः स्वर्णपुष्पी च कथ्यते ॥:
   entries:
   - head: नक्तमाल
     verify: false
@@ -1484,7 +1484,7 @@
     syns:
     - prati: वनल
       gender: m
-वृक्षोत्पलः कणिकारः पीतसारोऽसनः स्मृतः। दण्डोत्पलः सहदेवा सल्लकी स्याद्गजश्रिया॥:
+वृक्षोत्पलः कर्णिकारः पीतसालोऽसनः स्मृतः। दण्डोत्पलः सहदेवा सल्लकी स्याद् गजप्रिया॥:
   entries:
   - head: वृक्ष
     verify: false
@@ -1534,7 +1534,7 @@
     syns:
     - prati: गज
       gender: m
-? आन्यः निर्मण्डी सिन्धुवारः स्यान्मन्दारः पारिभद्रकः । ताम्बूली नागवल्ली स्याद्गुवाकः पूग उच्यते ॥ वानीरो वञ्जुलः शीतो विदुरो वेतसः स्मृतः । गोक्षुरः स्थलमुङ्खाटः शिवदष्टा त्रिकण्टकः ॥
+निर्गुण्डी सिन्धुवारः स्यान्मन्दारः पारिभद्रकः । ताम्बूली नागवल्ली स्याद् गूवाकः पूग उच्यते ॥: २००
 : entries:
   - head: वृक्ष
     verify: false
@@ -1566,6 +1566,8 @@
       gender: m
     - prati: पूग
       gender: m
+वानीरो वञ्जुलः शीतो विदुलो वेतसः स्मृतः । गोक्षुरः स्थलशृङ्गाटः श्वदंष्ट्रा स्यात्रिकण्टकः ॥: २०१
+  entries:  
   - head: शीत
     verify: false
     gender: m
