Fix various typos in 1_BhumiAdyaayah.yaml
Done  sloka 14 to 40

--- a/Output/Vaijayanti_Kosha/3_BhumiKhandah/1_BhumiAdyaayah.yaml
+++ b/Output/Vaijayanti_Kosha/3_BhumiKhandah/1_BhumiAdyaayah.yaml
@@ -800,7 +800,7 @@
       gender: n
     - prati: पार
       gender: n
-अङ्खद्वीपं यवद्वीपं मलयद्वीपमित्यपि । शङ्खद्वीपं कुशद्वीपं वाराहद्वीपमित्यपि ॥:
+अङ्गद्वीपं यवद्वीपं मलयद्वीपमित्यपि । शङ्खद्वीपं कुशद्वीपं वाराहद्वीपमित्यपि ॥:
   entries:
   - head: द्वीप
     verify: false
@@ -819,7 +819,7 @@
       gender: m
     - prati: वाराह
       gender: m
-अङ्गदद्वीपं चाक्रगिरं मध्ये पश्चिमवारिधौ। पूर्वाब्धौ तु यद् द्वीपं यत्र कालोदकोऽम्भवः॥:
+अङ्गद्वीपं चाक्रगिरं मध्ये पश्चिमवारिधि। पूर्वाब्धौ तु यवद्वीपं यत्र कालोदकोऽर्णवः॥:
   entries:
   - head: द्वीप
     verify: false
@@ -854,7 +854,7 @@
     syns:
     - prati: कालोदक
       gender: n
-मलयद्वीपमन्धौ स्याद्दक्षिणे तच्च दार्दुरम् । मालयं माहामलयं तत्परावतं तु चतुर्थकम् ॥:
+मलयद्वीपमब्धौ स्याद्दक्षिणे तच्च दार्दरम् । मालयं माहामलयं तत्पार्श्वे तु चतुर्थकम् ॥:
   entries:
   - head: द्वीप
     verify: false
@@ -875,7 +875,7 @@
     - prati: दार्दुर
       gender: m
     qual: दक्षिणे (southern)
-अतः पूर्व कुशद्वीपं चम्पकद्वीपमप्यतः। यतः पुरा रक्तवहो लोहितस्य नाम वारिधिः॥:
+अतः पूर्व कुशद्वीपं चम्पकद्वीपमप्यदः। यतः पुरा रक्तवहो लोहित्यो नाम वारिधिः॥:
   entries:
   - head: द्वीप
     verify: false
@@ -915,7 +915,7 @@
     - prati: हरि
       gender: m
     qual: वाराहं (western region)
-बर्हिणं सिंहलं देमङ्गं द्वारवती पद्मम् । पारसीकाङ्कलं स्वर्णद्वीपं वैदुतमार्षभम् ॥:
+बर्हिणं सिंहलं हेमकुड्यं  द्वारवतीपदम् । पारसीककुलं स्वर्णद्वीपं वैद्युतमार्षभ्म् ॥:
   entries:
   - head: द्वीप
     verify: false
@@ -945,7 +945,7 @@
       gender: m
     - prati: आर्षभ
       gender: m
-अयोध्युखं तारणं सौम्यं स्याच्चारणम् अमराणि कलम् । इत्याद्या मारुते वर्षं क्षुद्रा द्वीपाः सहस्रशः ॥:
+अयोमुखं तार्णसौमं स्यात्तार्णं ग्रामणिकुलम् । इत्याद्या भारते वर्षे क्षुद्रा द्वीपाः सहस्रशः ॥:
   entries:
   - head: द्वीप
     verify: false
@@ -971,7 +971,7 @@
       gender: m
     - prati: मारुत
       gender: m
-नीरज्ञपदो देशस्तद्भेदाः पुंसि भूम्नि च। लियो वरेन्द्रकी खाद्या तीराढाद्या नैव भूमनि॥:
+नीवृज्जनपदो देशस्तद्भेदाः पुंसि भूम्नि च। स्त्रियो वरेन्द्री स्रावस्तीराढाद्या नैव भूमनि ॥:
   entries:
   - head: देश
     verify: false
@@ -1009,7 +1009,7 @@
       gender: m
     - prati: खाद्य
       gender: m
-प्राग् अदक्षिणः शरावत्याः प्राच्योऽस्याः पश्चिमोत्तरः। उदीच्यो मध्यदेशस्तु देशो यो मध्यमस्तयोः ॥:
+प्राग्दक्षिणः शरावत्याः प्राच्योऽस्याः पश्चिमोत्तरः। उदीच्यो मध्यदेशस्तु देशो यो मध्यमस्तयोः ॥:
   entries:
   - head: दिश्
     verify: false
@@ -1035,7 +1035,7 @@
       gender: m
     - prati: मध्यम
       gender: m
-आयावतो ब्रह्मादेर्मध्यं विन्ध्यदिमागयोः। अथोदीच्या जनपदास्तत्र चीनाः खरम्भराः॥:
+आर्यावर्तो ब्रह्मवेदिर्मध्यं विन्ध्यहिमागयोः। अथोदीच्या जनपदास्तत्र चीनाः खरम्भराः॥:
   entries:
   - head: देश
     verify: false
@@ -1070,7 +1070,7 @@
     - prati: चीन
       gender: m
     qual: उत्तरदिग्भागे
-गान्धाराः स्थु दिदण्डाः स्युर्वनास्तु हुरुष्कराः। सम्भालाः स्युः शूरसेना अपि ते शूरसेनकाः॥:
+गान्धारास्तु दिहण्डाः स्युर्यवनास्तु हुरुष्कराः। सम्भालाः स्युः शूरसेना अपि ते शूरसेनयः ॥:
   entries:
   - head: गान्धार
     verify: false
@@ -1103,7 +1103,7 @@
       gender: m
     - prati: शूरसेनक
       gender: m
-मध्ये तु शूरगणानां मधुरा नाम वै पुरी। लम्बाकास्तु सुरण्डाः स्युः स्तोक्षारास्तु युगालिकाः ॥:
+मध्ये तु शूरसेनानां मधुरा नाम वै पुरी। लम्पाकास्तु मूरुण्डाः स्युस्तोक्षारास्तु युगालिकाः ॥:
   entries:
   - head: पुरी
     verify: false
@@ -1127,7 +1127,7 @@
     syns:
     - prati: युगालिक
       gender: m
-जालन्धराश्रिगतौः स्युर्होलाः स्युः खरटी खियाम् । भव्यभ्रमार्थदिच्छत्राः तेतुलास्तु कलिङ्गकाः ॥:
+जालन्धरास्त्रिगर्ताः स्युर्होलाः स्युः खरटी स्त्रियाम् । प्रत्यग्रथास्त्वाहिच्छ्त्रास्तैतुलस्तु कलिङ्गकाः ॥:
   entries:
   - head: जालन्धर
     verify: false
@@ -1161,7 +1161,7 @@
     syns:
     - prati: कलिङ्गक
       gender: m
-टकवार्षीककाश्मीरतुरुष्केषु सिन्धुषु । बाह्लीका बाह्निकाः कीराः शाकयाः दारदाः क्रमात् ॥:
+टर्कवाहीककाश्मीरतुरुष्केषु ससिन्धुषु । बाह्लीका बाह्निकाः कीराः शाकयाो दारदाः क्रमात् ॥:
   entries:
   - head: देश
     verify: false
@@ -1193,7 +1193,7 @@
       gender: m
     - prati: दारद
       gender: m
-कृमालकास्तु सौवीरा योगेयास्तु चृगालकाः। अप्यन्ये पारदाः किंवा कुल्या इत्यादिनीवृतः ॥:
+कृमालकास्तु सौवीरा यौधेयास्तु नृगालिकाः। अप्यन्ये पारदाः किञ्जाः कुल्या इत्यादिनीवृतः ॥:
   entries:
   - head: कृमि
     verify: false
@@ -1222,7 +1222,7 @@
       gender: m
     - prati: कुल्य
       gender: m
-अथ प्राच्याः जनपदास्तत्र जुद्धरकाः कुजाः। प्राज्योतिषाः कामरूपास्तथा प्राग्जनालिका अपि ॥:
+अथ प्राच्याः जनपदास्तत्र मुद्ररकाः कुजाः। प्राग्ज्योतिषाः कामरूपास्तथा प्राग्जलिका अपि ॥:
   entries:
   - head: जनपद
     verify: false
@@ -1261,7 +1261,7 @@
     syns:
     - prati: प्राग्जनालिक
       gender: m
-विदेशास्तीरभूमिः खेटी ललाटवती तु परज्ञका ! राढा तु सुद्धा पृथ्वी स्तु बलेन्द्रपुण्डरीकलक्षणा ॥:
+विदेहास्तीरभुक्तिः स्त्री स्रावस्ती तु परञ्जका ! राढा तु सुह्याः पुण्ड्रास्तु वरेन्द्री पुण्ड्रलक्षणा ॥:
   entries:
   - head: देश
     verify: false
@@ -1300,7 +1300,7 @@
       gender: m
     - prati: पुण्डरीक
       gender: n
-भौरिकाः स्युः समुद्रटा अङ्गाश्चम्पोपलक्षणाः । वङ्गास्तु हरिकेलीया मगधाः कोकटाः स्मृताः ॥:
+भौरिकाः स्युः समतटा अङ्गाश्चम्पोपलक्षणाः । वङ्गास्तु हरिकेलीया मगधाः कीकटाः स्मृताः ॥:
   entries:
   - head: देश
     verify: false
@@ -1328,7 +1328,7 @@
       gender: m
     - prati: कोकट
       gender: m
-अप्यन्ये ऽन्धाः सार्वा इत्याद्या नीचतः प्रथक् । विन्ध्यात् तदक्षिणा देशा दक्षिणापथ संज्ञिताः ॥:
+अप्यन्येऽन्ध्रा व्रताः साल्वा इत्याद्या नीवृतःपृथक् । विन्ध्यात्तु दक्षिणा देशा दक्षिणापथसंज्ञिताः ॥:
   entries:
   - head: देश
     verify: false
@@ -1348,7 +1348,7 @@
     - prati: अन्य
       gender: m
     qual: Obscure or different group
-'तत्र पाण्ड्याः पाण्डिया: स्युः पुन्तलाः स्तूपदालकाः। चोलाः स्युः पालवर्ताꣳ महाराष्ट्रास्तु दण्डकाः ॥':
+तत्र पाण्ड्याः पाण्डिया:स्युः पुन्तलाः स्तूपहालकाः। चोलाः स्युरुत्पलावर्ता महाराष्ट्रास्तु दण्डकाः ॥:
   entries:
   - head: पाण्ड्य
     verify: false
@@ -1391,7 +1391,7 @@
       gender: m
     - prati: दण्डक
       gender: m
-अप्यन्ये केरलाः श्चल्याः सेतुजा इलकालकाः। इषीकाः शबराः राज्ञाः इत्याद्या नीताः प्रथक् ॥:
+अप्यन्ये केरलाः कुल्याः सेतुजाः कुलकालकाः। इषीकाः शबरारट्टा इत्याद्या नीवृतः पृथक् ॥:
   entries:
   - head: केरल
     verify: false
@@ -1417,9 +1417,7 @@
       gender: m
     - prati: राज्ञ
       gender: m
-अपरन्तास्तु पाश्चात्यास्ते च सुरयोरकादयः । अथेमे मलदेशाद्या विन्ध्यपर्वतवासिनः ॥:
-  entries: []
-तत्र स्युर्मलदाः स्थौराः करूषाः तु दद्याः । त्रैपुराः तु दाराः स्युश्चैयास्ते चेदयश्च ते ॥:
+अपरन्तास्तु पाश्चात्यास्ते च सुर्यारकादयः । अथेमे मलदाद्याख्या विन्ध्यपर्वतवासिनः ॥: 
   entries:
   - head: मलद
     verify: false
@@ -1428,6 +1426,13 @@
     syns:
     - prati: मलद
       gender: m
+  तत्र स्युर्मलदाः स्थौराः करूशास्तु बृहद्गृहाः । त्रैपुरास्तु हाहालाः स्युश्चैद्यास्ते चेदयश्च ते ॥: 
+   entries:
+  - head: स्थौर
+    verify: false
+    comment: ''
+    gender: m
+    syns:
     - prati: स्थौर
       gender: m
   - head: करूष
@@ -1457,7 +1462,7 @@
       gender: m
     - prati: चेदय
       gender: m
-दाशार्णाः स्थुरबेदिपरा मालवाः स्युरवन्तयः । अप्यन्ये मेकला भोजाः कोसलाद्याश्च नीवृतः ॥:
+दाशार्णाः स्थुर्वेदिपरा मालवाः स्युरवन्तयः । अप्यन्ये मेकला भोजाः कोसलाद्याश्च नीवृतः ॥: 
   entries:
   - head: राज्य
     verify: false
@@ -1476,7 +1481,7 @@
       gender: m
     - prati: कोसल
       gender: m
-अथ देशा मध्यदेशो मरुवस्तु दशेरकाः। सप्तवाह्यः कारकोत्सीयास्तेषां रवियवाः परे ॥:
+अथ देशा मध्यदेशे मुरवस्तु दशेरकाः। साल्वास्तु कारकुत्सीयास्तेषा त्ववयवाः परे ॥:
   entries:
   - head: देश
     verify: false
@@ -1514,7 +1519,7 @@
       gender: m
     - prati: यव
       gender: m
-उदुम्बरास्तिलक्षाला महाकारा नरन्धराः। हलिङ्गाः शरदण्डाश्च षट् सारवावयवा इमे ॥:
+उदुम्बरास्तिलखला महाकारा युगन्धराः। हुलिङ्गाः शरदण्डाश्च षट् साल्वावयवा इमे ॥:
   entries:
   - head: नरन्धर
     verify: false
@@ -1534,7 +1539,7 @@
     - prati: नरन्धर
       gender: m
     qual: षट् सारवावयव (six essential parts)
-अप्यन्ये कुन्तलाः कुल्याः कलिङ्गाः काशिकोसलाः । मेकलाः कुलटाः सैरा जाङ्गलाः परथवो वरकाः ॥:
+अप्यन्ये कुन्तलाः कुल्याः कलिङ्गाः काशिकोसलाः । मेकलाः कुसटाः सैरा जाङ्गलाः पृथवो वृकाः ॥:
   entries:
   - head: जनपद
     verify: false
