Fix punctuation and spelling errors in YAML
Done slokas up to 50

--- a/Output/Vaijayanti_Kosha/3_BhumiKhandah/1_BhumiAdyaayah.yaml
+++ b/Output/Vaijayanti_Kosha/3_BhumiKhandah/1_BhumiAdyaayah.yaml
@@ -894,7 +894,7 @@
     - prati: लोहित
       gender: m
     qual: पुरा रक्तवहः
-अथ प्रतीच्यां वाराहं वराहद्वीपमायतम्। यत्र यज्ञवराहोऽसौ हरिरद्यापि तिष्ठति ॥:
+अथ प्रतीच्यां वाराहं वराहद्वीपमायतम् । यत्र यज्ञवराहोऽसौ हरिरद्यापि तिष्ठति ॥:
   entries:
   - head: द्वीप
     verify: false
@@ -915,7 +915,7 @@
     - prati: हरि
       gender: m
     qual: वाराहं (western region)
-बर्हिणं सिंहलं हेमकुड्यं  द्वारवतीपदम् । पारसीककुलं स्वर्णद्वीपं वैद्युतमार्षभ्म् ॥:
+बर्हिणं सिंहलं हेमकुड्यं द्वारवतीपदम् । पारसीककुलं स्वर्णद्वीपं वैद्युतमार्षभ्म् ॥:
   entries:
   - head: द्वीप
     verify: false
@@ -1569,7 +1569,7 @@
     - prati: वरक
       gender: m
     qual: Different regional/tribal names or groups
-पटच्चरादयश्चान्ये मध्यदेशस्य नीकृतः। उन्नतानामन्तरेषु बहवः श्चुनीडतः ॥:
+पटच्चरादयश्र्वन्ये मध्यदेशस्य नीवृतः। उक्तानामन्तरेषु बहवः क्षुद्रनीवृतः ॥:
   entries:
   - head: पट
     verify: false
@@ -1600,7 +1600,7 @@
       gender: m
     - prati: श्चुनीड
       gender: m
-मर्वः पुंसि धन्वा च आसारी तु स्थली स्थलम् । कचङ्गला तु नीलिङ्गा भूमौ नानाजन्तुसंयुता ॥:
+मरवः पुंसि धन्वान च आसारी तु स्थली स्थलम् । कचङ्गला तु नीलिङ्गा भूर्नानाजन्तुसंयुता ॥:
   entries:
   - head: धन्वन्
     verify: false
@@ -1637,7 +1637,7 @@
     - prati: नीलिङ्गा
       gender: f
     qual: नानाजन्तुसंयुता
-पङ्किलः पङ्कवान् देशो वेतस्वान् बहुवेतसः। शालः शादहरितः पुष्पदाम् ईषदाधिकः॥:
+पङ्किलः पङ्कवान् देशो वेतस्वान् बहुवेतसः। शाद्वलः शादहरितः कुमुद्वान्  कुमुदाधिकः॥:
   entries:
   - head: देश
     verify: false
@@ -1673,7 +1673,7 @@
     syns:
     - prati: पुष्पदाम्
       gender: n
-सनलो नडवलो नड्वान् छदाकरः शकराधिकः। देशः शङ्करिलोऽप्येकबसुन्नेयौ सिकतावति ॥:
+सनलो नड्वलो नड्वाञ्छार्करः शर्कराधिकः। देशः शर्करिलोऽप्येकवसुन्नेयौ सिकतावति ॥:
   entries:
   - head: नल
     verify: false
@@ -1700,7 +1700,7 @@
     syns:
     - prati: एक
       gender: m
-कृष्णभूमिः पाण्डुभूमिः कृष्णा पाण्डुश्च यत्र मृत् | अनूपः सम्बरन्यस्तु जाङ्गलः शूल्य उच्चटः ॥:
+कृष्णभूमः पाण्डुभूमः कृष्णा पाण्डुश्च यत्र मृत् । अनूपः साम्बुरन्यस्तु जाङ्गलः शून्य उच्चटः ॥:
   entries:
   - head: भूमि
     verify: false
@@ -1735,7 +1735,7 @@
       gender: m
     - prati: सम्बर
       gender: m
-स्फुटिते सारणारटरौ राजन्वांसु राजनि। अन्यत्र राजवान् व्रष्टिजीवनो देवमातृकः॥:
+स्फुटिते सारणारट्टौ राजन्वांस्तु सुराजनि। अन्यत्र राजवान् व्रष्टिजीवनो देवमातृकः॥:
   entries:
   - head: राजन्
     verify: false
@@ -1764,7 +1764,7 @@
       gender: n
     - prati: व्रष्टि
       gender: m
-स्यान्नदीमार्थको देशो नाम्बूतपादसस्यकः । पद्यः पदार्थभोग्यः स्यात् त्रिष्वेते पड्गलादयः ॥:
+स्यान्नदीमातृको देशो नाद्यम्बूत्पादसस्यकः । पद्यः पदाङ्कयोग्यः स्यात् त्रिष्वेते पङ्किलादयः ॥:
   entries:
   - head: देश
     verify: false
@@ -1792,7 +1792,7 @@
     syns:
     - prati: पङ्गल
       gender: m
-श्मशानं स्यात् पिशाचानां खेवासः क्रोधिपर्वतः। शतमूर्धा वामधरो नाकुबैट्रीकमल्लिकाम् ॥:
+श्मशानं स्यात् पितृवनं  स्त्रीवासः त्र्किमिपर्वतः। शतमूर्धा वामलूरो नाकुर्वल्मीकमस्त्रियाम् ॥:
   entries:
   - head: श्मशान
     verify: false
@@ -1844,7 +1844,7 @@
     syns:
     - prati: मल्लिका
       gender: f
-मार्गो ऽध्वा पदधी पन्थाः पद्या चैकपदी सृतिः। सुपन्थाः अतिपन्थाश्च सत्पथश्च श्रुभे पथि ॥:
+मार्गोऽध्वा पदवी पन्थाः पद्या चैकपदी सृतिः। सुपन्थाः अतिपन्थाश्च सत्पथश्च शुभे पथि ॥:
   entries:
   - head: मार्ग
     verify: false
@@ -1874,7 +1874,7 @@
       gender: m
     - prati: सत्पथ
       gender: m
-विपथः कापथो व्यध्व दुरश्वश्च कुपन्थकः । अपन्थास्त्वपथं दुर्गे प्रान्तरे मध्वनि ॥:
+विपथः कापथो व्यध्वो दुरध्वश्च कुदध्वनि । अपन्थास्त्वपथं दुरशून्ये प्रान्तरमध्वनि ॥:
   entries:
   - head: पथ
     verify: false
